nswide-mtls/policy-based/ns-policy-strict.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: foo
spec:
  mtls:
    mode: STRICT
