nswide-mtls/policy-based/details-mtls-enabled.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "details-enable-mtls"
spec:
  host: details
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
